--- a/public/index.html
+++ b/public/index.html
@@ -98,16 +98,28 @@
 
       const task = todoInput.value;
       const status = statusInput.value;
+      const editId = form.getAttribute('data-edit-id');
 
       let res;
 
-      // CREATE
-      res = await fetch('/todos', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ task, status })
-      });
-    
+      if (editId) {
+        // UPDATE
+        res = await fetch(`/todos/${editId}`, {
+          method: 'PUT',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ task, status })
+        });
+
+        form.removeAttribute('data-edit-id');
+        form.querySelector('button[type="submit"]').textContent = 'Add Task';
+      } else {
+        // CREATE
+        res = await fetch('/todos', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ task, status })
+        });
+      }
 
       if (res.ok) {
         todoInput.value = '';
