add in progress color code

--- a/public/index.html
+++ b/public/index.html
@@ -69,9 +69,11 @@
       color: white;
       text-transform: capitalize;
     }
-
     .status-todo {
       background-color: #6c757d; /* gray */
+    }
+    .status-inprogress {
+      background-color: #fd7e14; /* orange */
     }
 
   </style>
