add done color code

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,9 @@
     .status-inprogress {
       background-color: #fd7e14; /* orange */
     }
-
+    .status-done {
+      background-color: #28a745; /* green */
+    }
   </style>
 </head>
 <body>
