--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,11 @@
     .status-done {
       background-color: #28a745; /* green */
     }
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+      opacity: 0.6;
+    }
   </style>
 </head>
 <body>
