add index to get the numbers

--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
 
       todoList.innerHTML = '';
 
-      todos.forEach(todo => {
+      todos.forEach((todo, index) => {
         const li = document.createElement('li');
           li.innerHTML = `
             <span data-status="${todo.status}">
