--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     body {
       font-family: Arial, sans-serif;
       padding: 40px;
-      background: #f5f5f5;
+      background: linear-gradient(135deg, #e0bbff,  #d1a3ff,  #4387a7,  #7b28c9,  #9333ea,  #4a6fe7,  #ca41b8 );
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
     }
     h1 {
       color: #333;
@@ -101,6 +103,11 @@
       background-color: #ccc;
       cursor: not-allowed;
       opacity: 0.6;
+    }
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
   </style>
 </head>
