--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       background: linear-gradient(135deg, #e0bbff,  #d1a3ff,  #4387a7,  #7b28c9,  #9333ea,  #4a6fe7,  #ca41b8 );
       background-size: 400% 400%;
       animation: gradientBG 15s ease infinite;
+      margin: auto 250px
     }
     h1 {
       color: #333;
