--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       margin: auto 250px
     }
     h1 {
-      color: #333;
+      color: #ffffff;
     }
     #todo-form {
       margin-bottom: 20px;
