--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,9 @@
         </li>
       </ul>
     </main>
+    <footer>
+      <p>Made with ❤️ for productivity. &copy; 2025 Todo App</p>
+    </footer>
   </div>
   <script>
     const form = document.getElementById('todo-form');
